[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "rest-filters"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
]

[project.urls]
"Homepage" = "https://github.com/realsuayip/rest-filters"
"Bug Tracker" = "https://github.com/realsuayip/rest-filters/issues"

[dependency-groups]
dev = [
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "drf-spectacular",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "tox",
    "tox-uv",
]
docs = [
    "docstrfmt",
    "furo",
    "sphinx",
]

[tool.uv]
required-version = ">=0.8.6"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
]
fixable = ["I"]
ignore = ["B904", "RUF012"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "rest_framework",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django"]
rest_framework = ["rest_framework"]

[tool.lint.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ". rest_filters"
addopts = """
    -Wall
    --no-migrations
    --tb=short
 """

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "return NotImplemented",
]

[tool.coverage.html]
show_contexts = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{py310,311,312,313}-django{42,52}

[testenv]
deps =
    django42: django>=4.2,<5
    django52: django>=5.2,<6
    pytest
    pytest-cov
    pytest-django
    drf-spectacular
commands =
    pytest
"""
